# nsa-codebreaker-2021

./: .gitignore  Cargo.toml  README.md
resources/: common_names.txt  ip_ranges.txt  logins.json  rop  task10_exploit.sh  task8_encrypted_payloads  task8_ips.txt  task8_results.txt  usernames.txt
src/: main.rs  shared.rs  task03.rs  task08.rs  task09.rs  task10.rs
