[package]
name = "nsa-codebreaker-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xsalsa20poly1305 = "0.8"
sha2 = "0.9"
hex = "0.4"
itertools = "0.10"
serde = "1.0"
serde_json = "1.0"
rayon = "1.5"
cidr = "0.2"
rand = "0.8"
anyhow = "1.0"
